set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Disable benchmark testing" FORCE)
set(BENCHMARK_ENABLE_EXCEPTIONS OFF CACHE BOOL "Disable benchmark exceptions" FORCE)
set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Don't install benchmark" FORCE)
set(BENCHMARK_DOWNLOAD_DEPENDENCIES OFF CACHE BOOL "Don't download dependencies" FORCE)
set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "Disable Google Test in benchmark" FORCE)
set(HAVE_STD_REGEX ON CACHE BOOL "OK" FORCE)
find_package(benchmark REQUIRED)

function(add_benchmark name)
  add_executable(${name} ${ARGN})
  target_link_libraries(${name} benchmark::benchmark benchmark::benchmark_main)
  add_test(NAME ${name}-test COMMAND ${name})
endfunction()

add_benchmark(BenchmarkPerson BenchmarkPerson.cpp)
target_link_libraries(BenchmarkPerson Person)
